Nye og endrede notes under utforsk

--- a/utforske/mif_pandas_utforsk1.ipynb
+++ b/utforske/mif_pandas_utforsk1.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Her skal det være en relevant overskrift."
+    "## Innlesing og behandling av flere parque-datsett i samme prosessesteg med Pyhton og pandas bibliotek\n",
+    "I denne noten viser man hvordan man kan lese inn og behandle et ukjent antall inndatasett ved å bruke phyton collection datatypes (list, dictionary og tuple) og phyton for loops for å operasjonalisere steg i en tenkt klargjørings eller analyseprosess."
    ]
   },
   {
@@ -84,13 +85,6 @@
     "#### Selketerer ut rader bestående av de filnavn som vi ønsker å trekke ut for videre bearbeiding. \n",
     "Viser hvordan man kan bruke liste (Phyton list) for å gjøre en slik seleksjon."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -224,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Innbyggerantall"
+    "Innbyggerantall (bruker liste funksjonalitet)"
    ]
   },
   {
@@ -241,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Kobler sammen datsettene og etablerer en dataframe vi skal utføre statistisk analyse på. "
+    "### Kobler sammen datsettene og etablerer en dataframe vi skal skrive til dapla for senere å utføre en statistisk analyse på"
    ]
   },
   {
@@ -308,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dp.write_pandas(df_sammensatt, '/user/matz.ivan.faldmo/df_sammensatt', valuation='INTERNAL', state= 'INPUT')\n"
+    "dp.write_pandas(df_sammensatt, '/felles/veiledning/datasett/df_sammensatt_python', valuation='INTERNAL', state= 'INPUT')\n"
    ]
   },
   {
@@ -317,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dp.show('/user/matz.ivan.faldmo/')"
+    "dp.show('/felles/veiledning/datasett/')"
    ]
   },
   {
