--- a/utforske/mif_pyspark_utforsk1.ipynb
+++ b/utforske/mif_pyspark_utforsk1.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Her skal det være en relevant overskrift."
+    "## Innlesing og behandling av flere parque-datsett i samme prosessesteg med Pyspark\n",
+    "I denne noten viser man hvordan man kan lese inn og behandle et ukjent antall inndatasett ved å bruke phyton collection datatypes (list, dictionary og tuple) og phyton for loops for å operasjonalisere steg i en tenkt klargjørings eller analyseprosess.   "
    ]
   },
   {
@@ -43,8 +44,7 @@
    "outputs": [],
    "source": [
     "INNDATA_PATH = '/felles/veiledning/pyspark/eksempler/*'\n",
-    "df_datasets = spark.read.path(INNDATA_PATH)\n",
-    "#df_datasets = spark.read.path(INNDATA_PATH+'*')"
+    "df_datasets = spark.read.path(INNDATA_PATH)\n"
    ]
   },
   {
@@ -77,12 +77,7 @@
    "outputs": [],
    "source": [
     "df_datasets = df_datasets.withColumn('filename',F.substring(df_datasets.path, len(INNDATA_PATH), 30))\n",
-    "df_datasets.show(100, False)\n",
-    "\n",
-    "\n",
-    "#df_datasets = df_datasets.withColumn('filename',F.length(df_datasets.path))\n",
-    "#df_datasets = df_datasets.withColumn('filename',df_datasets.path[len(INNDATA_PATH):20])\n",
-    "\n"
+    "df_datasets.show(100, False)\n"
    ]
   },
   {
@@ -98,17 +93,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "filenames = ['areal', 'bnp', 'innbyggerantall/2020']\n",
     "df_datasets = df_datasets.filter(df_datasets.filename.isin(filenames))\n",
-    "df_datasets.show()"
+    "df_datasets.show(100, False)"
    ]
   },
   {
@@ -156,25 +144,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict_df['areal'].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Tar ut oversikt over de radene i kolonnen \"Land\" som er duplikater\n",
-    "dict_df['areal'].exceptAll(dict_df['areal'].dropDuplicates(['Land'])).show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -211,7 +180,7 @@
    "metadata": {},
    "source": [
     "### Fjerner duplikater og kolonner vi ikke ønsker å ha med videre\n",
-    "Vi ønsker å sette sammen informasjon fra datasettene i dictinaryet til et nytt datasett. Dette vil vi gjøre ved å koble de sammen via Landkode variabel. Vi fjerner eventuelle dublikater på Landkode og dropper variable som vi ikke trenger/ønsker å ha med på det nye datasettet i innledende steg under.\n"
+    "Vi ønsker å sette sammen informasjon fra datasettene i dictinaryet til et nytt datasett. Dette vil vi gjøre ved å koble de sammen via Landkode variabel. Vi fjerner eventuelle dublikater på Landkode og dropper variable som vi ikke trenger/ønsker å ha med på det nye datasettet i innledende steg under. Skriver ut duplikatene i output før vi deretter fjerner de fra dictionaryet\n"
    ]
   },
   {
@@ -219,6 +188,15 @@
    "metadata": {},
    "source": [
     "Areal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_df['areal'].exceptAll(dict_df['areal'].dropDuplicates(['Land'])).show()"
    ]
   },
   {
@@ -235,6 +213,15 @@
    "metadata": {},
    "source": [
     "BNP (Legger inn variable som skal droppes fra dataframe i phyton tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_df['bnp'].exceptAll(dict_df['bnp'].dropDuplicates(['Land'])).show()"
    ]
   },
   {
@@ -260,6 +247,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dict_df['innbyggerantall/2020'].exceptAll(dict_df['innbyggerantall/2020'].dropDuplicates(['Land'])).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "liste_drop_kolonner = ['Land', 'Kilde', 'År']\n",
     "dict_df['innbyggerantall/2020'] = dict_df['innbyggerantall/2020'].drop_duplicates(['Landkode']).drop(*liste_drop_kolonner)"
    ]
@@ -268,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Kobler sammen datsettene og etablerer en dataframe vi skal utføre statistisk analyse på. "
+    "### Kobler sammen datsettene og etablerer en dataframe vi skal skrive til dapla for senere å utføre en statistisk analyse på. "
    ]
   },
   {
@@ -338,7 +334,7 @@
     "df_sammensatt.write\\\n",
     "    .option(\"valuation\", \"INTERNAL\")\\\n",
     "    .option(\"state\", \"INPUT\")\\\n",
-    "    .path('/user/matz.ivan.faldmo/df_sammensatt_pyspark')\n",
+    "    .path('/felles/veiledning/datasett/df_sammensatt_pyspark')\n",
     "\n"
    ]
   },
@@ -348,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = spark.read.path('/user/matz.ivan.faldmo/*')\n",
+    "ds = spark.read.path('/felles/veiledning/datasett/*')\n",
     "ds.show(10, False)"
    ]
   },
