liten endring i noe deskriptiv_statistikk_pandas

--- a/utforske/deskriptiv_statistikk_pandas.ipynb
+++ b/utforske/deskriptiv_statistikk_pandas.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "INNDATA_PATH = '/user/matz.ivan.faldmo/'\n",
+    "INNDATA_PATH = '/felles/veiledning/datasett/'\n",
     "df_datasets = dp.show(INNDATA_PATH)"
    ]
   },
@@ -68,6 +68,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Parquet datasettene df_sammensatt_pyspark og df_sammensatt_python over skal i utgangspunktet være identiske. De er produsert i henholdsvis pyspark og python. I vårt eksempel tar vi utgangspunkt i df_sammensatt_python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Leser inn parquet datasett\n",
     "Leser inn parquet datsett som vi skal utøre beregninger på."
    ]
@@ -78,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_areal_bnp_og_innbyggerantall = dp.read_pandas('/user/matz.ivan.faldmo/df_sammensatt')\n",
+    "df_areal_bnp_og_innbyggerantall = dp.read_pandas('/felles/veiledning/datasett/df_sammensatt_python')\n",
     "df_areal_bnp_og_innbyggerantall\n"
    ]
   },
@@ -179,6 +186,13 @@
     "df_stat_advanced = desc_statistics(df_areal_bnp_og_innbyggerantall,0,True)\n",
     "df_stat_advanced"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
