Gjort noen justeringer

--- a/utforske/deskriptiv_statistikk_pyspark.ipynb
+++ b/utforske/deskriptiv_statistikk_pyspark.ipynb
@@ -155,7 +155,7 @@
     "var_lst.remove('summary')\n",
     "dict_median = {}\n",
     "for col in var_lst:\n",
-    "    if (isinstance(df_areal_bnp_og_innbyggerantall.schema[col].dataType, LongType)) | (isinstance(df.schema[col].dataType, IntegerType)):\n",
+    "    if (isinstance(df_areal_bnp_og_innbyggerantall.schema[col].dataType, LongType)) | (isinstance(df_areal_bnp_og_innbyggerantall.schema[col].dataType, IntegerType)):\n",
     "        dict_median[col] = df_areal_bnp_og_innbyggerantall.approxQuantile(col, [0.5], 0) \n",
     "    else:\n",
     "        dict_median[col] = \"null\" \n",
@@ -183,8 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_stat = df_stat.unionByName(df_median)\n",
-    "df_stat.show()"
+    "df_stat_sammensatt = df_stat.unionByName(df_median)\n",
+    "df_stat_sammensatt.show()"
    ]
   },
   {
@@ -208,15 +208,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var_lst = list(df_sammensatt_stat.columns)\n",
+    "var_lst = list(df_stat_sammensatt.columns)\n",
     "var_lst.remove('summary')\n",
     "i = 1\n",
     "for col in var_lst:\n",
-    "    df_tmp = df_sammensatt_stat.groupBy().pivot('summary').agg(F.sum(col)).withColumn('variabel',F.lit(col))\n",
+    "    df_tmp = df_stat_sammensatt.groupBy().pivot('summary').agg(F.sum(col)).withColumn('variabel',F.lit(col))\n",
     "    if i == 1:\n",
-    "        df_sammensatt_stat_piv = df_tmp \n",
+    "        df_stat_sammensatt_piv = df_tmp \n",
     "    else:\n",
-    "        df_sammensatt_stat_piv = df_sammensatt_stat_piv.unionByName(df_tmp)\n",
+    "        df_stat_sammensatt_piv = df_stat_sammensatt_piv.unionByName(df_tmp)\n",
     "    i = i + 1\n",
     "    \n",
     "    \n"
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sammensatt_stat_piv.show(100, False)"
+    "df_stat_sammensatt_piv.show(100, False)"
    ]
   },
   {
