--- a/utforske/deskriptiv_statistikk_pandas.ipynb
+++ b/utforske/deskriptiv_statistikk_pandas.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Beregning av statistiske størrelser med pyhton og pandas\n",
-    "### I denne noten viser vi hvordan vi kan beregne statistiske størrelser i pyhton og ved bruk av pandas. Utgangspunkt for beregninger er parquet datasett som leses inn fra dapla."
+    "### I denne noten viser vi hvordan vi kan beregne statistiske størrelser i pyhton og ved bruk av pandas.<br> Utgangspunkt for beregninger er parquet datasett som leses inn fra dapla."
    ]
   },
   {
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "#### Innhenter verktøy fra bibliotek\n",
-    "Daplas Python pakke (dapla) og biliotekene og statistics og pandas importeres."
+    "Daplas Python pakke (dapla) og bibliotekene statistics og pandas importeres."
    ]
   },
   {
@@ -31,7 +31,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Kjører metoden show for å få oversikt over parquet datasett som skal være utgangspunkt for beregninger. Oversikt blir lest inn i egen dataframe - df_datsets.\n",
+    "#### Viser datasett\n",
+    "Kjører metoden show for å få oversikt over parquet datasett som skal være utgangspunkt for beregninger.<br> Oversikten blir lest inn i egen dataframe - df_datasets.\n",
     "Aktuelt lagringsområde blir lagt inn som parameter (string objekt som vi definerer selv) INNDATA_PATH."
    ]
   },
@@ -49,8 +50,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### df_datsets skrives ut i output vindu. Setter opsjonen max_colwith til 150 slik at vi får se all informasjon i df_datasets i output.\n",
-    "Oversikt over ulike options som kan settes i Pandas:https://pandas.pydata.org/pandas-docs/stable/user_guide/options.html"
+    "#### Formaterer output\n",
+    "df_datasets skrives ut i output vindu. Setter opsjonen max_colwidth til 150 slik at vi får se all informasjon i df_datasets i output vinduet.<br>\n",
+    "Oversikt over ulike optioner som kan settes i Pandas. Se https://pandas.pydata.org/pandas-docs/stable/user_guide/options.html."
    ]
   },
   {
@@ -68,7 +70,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parquet datasettene df_sammensatt_pyspark og df_sammensatt_python over skal i utgangspunktet være identiske. De er produsert i henholdsvis pyspark og python. I vårt eksempel tar vi utgangspunkt i df_sammensatt_python."
+    "Parquet datasettene df_sammensatt_pyspark og df_sammensatt_python som vises når man kjører paragrafen over, skal i utgangspunktet være identiske.<br> \n",
+    "De er produsert i henholdsvis pyspark og python. I vårt eksempel tar vi utgangspunkt i df_sammensatt_python."
    ]
   },
   {
@@ -94,7 +97,7 @@
    "metadata": {},
    "source": [
     "### Beregninger - eksempel 1\n",
-    "Vi ønsker som utgangspunkt å beregne størrelsene count, mean, std, min, max og median for alle variable i df_areal_bnp_og_innbyggerantall. Ved å kjøre metoden describe på datasettet får vi ut  størrelsene count, mean, std, min, max, 25% percentile, 50% percentile og 75% percentile.  Vi betrakter 50% percentile som medianen. Dvs at vi får ut alle de størrelser vi ønsker å beregne i dette eksenpelet kun ved å describe metoden i pandas. "
+    "Vi ønsker som utgangspunkt å beregne størrelsene count, mean, std, min, max og median for alle variable i df_areal_bnp_og_innbyggerantall. Ved å kjøre metoden describe på datasettet får vi ut størrelsene count, mean, std, min, max, 25% percentile, 50% percentile og 75% percentile. Vi betrakter 50% percentile som medianen. Dvs at vi får ut alle de størrelser vi ønsker å beregne i dette eksempelet kun ved å benytte describe metoden i pandas. "
    ]
   },
   {
@@ -102,7 +105,7 @@
    "metadata": {},
    "source": [
     "##### Kjører ut statistiske størrelser\n",
-    "Kjører ut statistike størrelser fra datframe df_areal_bnp_og_innbyggerantall med metoden describe. Resultat fr metode blir lagt i dataframeen df_stat."
+    "Kjører ut statistiske størrelser fra dataframe df_areal_bnp_og_innbyggerantall med metoden describe. Resultat blir lagt i dataframen df_stat."
    ]
   },
   {
@@ -120,7 +123,7 @@
    "metadata": {},
    "source": [
     "##### Transformere\n",
-    "Transformerer df_stat med transpose metoden i pandas slik at rader i df_stat blir kolonner i dataframe df_stat_trans. Formål er å gjøre output mer oversiktlig ved at alle størrelser på en gitt variabel blir liggende i samme rad. Dette kan være hensiktsmessig i de tilfeller antall \"statistikkvaiable\" er høyt (dvs langt høyere enn de fire som inngår i eksempel."
+    "Transformerer df_stat med transpose metoden i pandas slik at rader i df_stat blir kolonner i dataframe df_stat_trans. Formål er å gjøre output mer oversiktlig ved at alle størrelser på en gitt variabel blir liggende i samme rad. Dette kan være hensiktsmessig i de tilfeller antall \"statistikkvariable\" er høyt (dvs langt høyere enn de fire som inngår i eksempel)."
    ]
   },
   {
@@ -138,9 +141,9 @@
    "metadata": {},
    "source": [
     "### Beregninger - eksempel 2\n",
-    "I eksempel 1 fikk vi beregnet de størrelsene vi var ute etter kun ved å bruke metoden describe. Hvis vi ønsker å beregne størrelser som ikke er støttet av describe metoden kan vi bruke andre bibliotek - f.eks. statistics bilioteket. \n",
+    "I eksempel 1 fikk vi beregnet de størrelsene vi var ute etter kun ved å bruke metoden describe. Hvis vi ønsker å beregne størrelser som ikke er støttet av describe metoden kan vi bruke andre bibliotek - f.eks. statistics biblioteket. \n",
     "\n",
-    "I eksempel 2 ønsker vi å beregne medianen gjennom å bruke en fuksjon/metode fra statistics bibloteket. Videre ønsker vi i samme steg å sette sammen medianen \"sammen\" med størrelsene vi får ved å kjøre describe metoden. Resultat skal transformeres på tilsvarende måte som i eksempel 1.\n",
+    "I eksempel 2 ønsker vi å beregne medianen gjennom å bruke en funksjon/metode fra statistics bibloteket. Videre ønsker vi i samme steg å sette medianen \"sammen\" med størrelsene vi får ved å kjøre describe metoden. Resultat skal transformeres på tilsvarende måte som i eksempel 1.\n",
     "\n",
     "Det er satt opp en funksjon - desc_statistics - som utører nødvendige steg for beregningene. \n",
     "\n",
@@ -152,8 +155,8 @@
    "metadata": {},
    "source": [
     "Parametere til desc_statistics\n",
-    "- df  : dataframen som er input til fuksjon\n",
-    "- dec : Numerisk vaiabel som hvis satt til 0 endrer datatyper til integer\n",
+    "- df  : dataframen som er input til funksjonen\n",
+    "- dec : Numerisk variabel som hvis satt til 0 endrer datatyper til integer\n",
     "- med : Boolsk variabel som hvis satt til True beregner medianen ved å bruke funksjonen (median) i  statistics (st) biblioteket\n",
     "     \n"
    ]
@@ -186,13 +189,6 @@
     "df_stat_advanced = desc_statistics(df_areal_bnp_og_innbyggerantall,0,True)\n",
     "df_stat_advanced"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
