--- a/utforske/deskriptiv_statistikk_pyspark.ipynb
+++ b/utforske/deskriptiv_statistikk_pyspark.ipynb
@@ -35,7 +35,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Kjører metoden read.path for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning veilderens lagringsområde i sky.  Oversikt blir lest inn i egen dataframe - df_datsets.\n",
+    "#### Vis tilgjengelige datasett\n",
+    "Kjører metoden read.path for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning veilderens lagringsområde i sky. <br> Oversikten blir lest inn i egen dataframe - df_datsets.<br>\n",
     "Aktuelt lagringsområde blir lagt inn som parameter (string objekt som vi definerer selv) INNDATA_PATH."
    ]
   },
@@ -69,7 +70,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parquet datasettene df_sammensatt_pyspark og df_sammensatt_python over skal i utgangspunktet være identiske. De er produsert i henholdsvis pyspark og python. I vårt eksempel tar vi utgangspunkt i df_sammensatt_pyspark."
+    "Parquet datasettene df_sammensatt_pyspark og df_sammensatt_python som vises når man kjører paragrafen over, skal i utgangspunktet være identiske.<br> \n",
+    "De er produsert i henholdsvis pyspark og python. I vårt eksempel tar vi utgangspunkt i  df_sammensatt_pyspark."
    ]
   },
   {
@@ -77,7 +79,7 @@
    "metadata": {},
    "source": [
     "#### Leser inn parquet datasett\n",
-    "Leser inn parquet datsett df_sammensatt_pyspark, selekterer de variable vi skal bruke og etablerer dataframen df_areal_bnp_og_innbyggerantall"
+    "Leser inn parquet datasett df_sammensatt_pyspark, selekterer de variable vi skal bruke og etablerer dataframen df_areal_bnp_og_innbyggerantall"
    ]
   },
   {
@@ -94,8 +96,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Beregninger \n",
-    "Vi ønsker som utgangspunkt å beregne størrelsene count, mean, std, min, max og median for alle variable i df_areal_bnp_og_innbyggerantall. Ved å kjøre pyspark metoden describe på datasettet får vi ut  størrelsene count, mean, std, min og max. Dvs at pyspark describe har ikke støtte for å beregne medianen.\n",
+    "#### Beregninger \n",
+    "Vi ønsker som utgangspunkt å beregne størrelsene count, mean, std, min, max og median for alle variable i df_areal_bnp_og_innbyggerantall. Ved å kjøre pyspark metoden describe på datasettet får vi ut størrelsene count, mean, std, min og max. Dvs at pyspark describe har ikke støtte for å beregne medianen.\n",
     "\n",
     "Medianen må beregnes på annen måte og med annen funksjon/metode (i vårt eksempel med pyspark approxQuantile funksjonen). \n",
     "\n",
@@ -107,7 +109,7 @@
    "metadata": {},
    "source": [
     "##### 1. Kjører ut statistiske størrelser med describe\n",
-    "Kjører ut statistike størrelser fra datframe df_areal_bnp_og_innbyggerantall med metoden describe. Resultat fr metode blir lagt i dataframeen df_stat"
+    "Kjører ut statistiske størrelser fra dataframe df_areal_bnp_og_innbyggerantall med metoden describe. Resultat fra metode blir lagt i dataframeen df_stat"
    ]
   },
   {
@@ -142,7 +144,7 @@
    "source": [
     "##### 2. Beregner medianen\n",
     "Beregner medianen for hver kolonne i df_areal_bnp_og_innbyggerantall med funksjonen approxQuantile.\n",
-    "Resultat fra funsjon blir returnert inn i values felt i dictinaryet dict_median der key-value blir initiert med navn på kolonne i var_lst (kolonnenavnene i stat_df og de vi også skal beregne median for). Beregninger gjøres i loop på en og en variabel. Man må sjekke datatypen på kolonnen. approxQuantile feiler hvis datatype ikke er av numerisk type. Etter gjenomløp av loop blir dictinaryet transformert til et row-objekt som deretter blir transformert til et rdd-objekt før vi til slutt får etablert dataframen df_median ved å utføre metoden toDF på row-objektet. For å få like datatyper på df_stat og df_median (noe vi må ha for å få slått de sammen) endrer vi datatypen til de variabler i df_median som har ArrayType til String."
+    "Resultat fra funsjon blir returnert inn i values felt i dictionaryet dict_median der key-value blir initiert med navn på kolonne i var_lst (kolonnenavnene i stat_df og de vi også skal beregne median for). Beregninger gjøres i loop på en og en variabel. Man må sjekke datatypen på kolonnen. approxQuantile feiler hvis datatype ikke er av numerisk type. Etter gjennomløp av loop blir dictionaryet transformert til et row-objekt som deretter blir transformert til et rdd-objekt, før vi til slutt får etablert dataframen df_median ved å utføre metoden toDF på row-objektet. For å få like datatyper på df_stat og df_median (noe vi må ha for å få slått de sammen) endrer vi datatypen til de variabler i df_median som har ArrayType til String."
    ]
   },
   {
@@ -199,7 +201,7 @@
    "metadata": {},
    "source": [
     "##### 4. Transformerer df_stat_sammensatt \n",
-    "Transformerer df_stat (med bl.a. pivot funksjonen) slik at rader i df_stat blir kolonner i dataframe df_stat_piv. Formål er å gjøre output mer oversiktlig ved at alle størrelser på en gitt variabel blir liggende i samme rad. Dette kan være hensiktsmessig i de tilfeller antall \"statistikkvaiable\" er høyt (dvs langt høyere enn de fire som inngår i eksempel."
+    "Transformerer df_stat (med bl.a. pivot funksjonen) slik at rader i df_stat blir kolonner i dataframe df_stat_piv. Formål er å gjøre output mer oversiktlig ved at alle størrelser på en gitt variabel blir liggende i samme rad. Dette kan være hensiktsmessig i de tilfeller antall \"statistikkvariable\" er høyt (dvs langt høyere enn de fire som inngår i eksempel)."
    ]
   },
   {
