endringer etter konflikt
Endret på nytt etter mergekonflikter filene deskriptiv_statistikk_pandas.ipynb og deskriptiv_statistikk_pysparks.ipynb

--- a/utforske/deskriptiv_statistikk_pandas.ipynb
+++ b/utforske/deskriptiv_statistikk_pandas.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "#### Innhenter verktøy fra bibliotek\n",
-    "Daplas Python pakke (dapla) og biliotekene og statistics og pandas importeres."
+    "Daplas Python pakke (dapla), samt bibliotekene statistics og pandas importeres."
    ]
   },
   {
@@ -30,7 +30,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [ 
+   "source": [
     "#### Vis tilgjengelige datasett\n",
     "Kjører metoden show for å få oversikt over parquet datasett som skal være utgangspunkt for beregninger.<br> Oversikten blir lest inn i egen dataframe - df_datasets.\n",
     "Aktuelt lagringsområde blir lagt inn som parameter (string objekt som vi definerer selv) INNDATA_PATH."
@@ -50,7 +50,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### df_datsets skrives ut i output vindu. Setter opsjonen max_colwith til 150 slik at vi får se all informasjon i df_datasets i output.\n",
+    "#### Formater output\n",
+    "df_datsets skrives ut i output vindu. Setter opsjonen max_colwith til 150 slik at vi får se all informasjon i df_datasets i output.\n",
     "Oversikt over ulike options som kan settes i Pandas:https://pandas.pydata.org/pandas-docs/stable/user_guide/options.html"
    ]
   },
@@ -77,7 +78,7 @@
    "metadata": {},
    "source": [
     "#### Leser inn parquet datasett\n",
-    "Leser inn parquet datsett som vi skal utøre beregninger på."
+    "Leser inn parquet datasett som vi skal utføre beregninger på."
    ]
   },
   {
@@ -95,7 +96,7 @@
    "metadata": {},
    "source": [
     "### Beregninger - eksempel 1\n",
-    "Vi ønsker som utgangspunkt å beregne størrelsene count, mean, std, min, max og median for alle variable i df_areal_bnp_og_innbyggerantall. Ved å kjøre metoden describe på datasettet får vi ut  størrelsene count, mean, std, min, max, 25% percentile, 50% percentile og 75% percentile.  Vi betrakter 50% percentile som medianen. Dvs at vi får ut alle de størrelser vi ønsker å beregne i dette eksenpelet kun ved å describe metoden i pandas. "
+    "Vi ønsker som utgangspunkt å beregne størrelsene count, mean, std, min, max og median for alle variable i df_areal_bnp_og_innbyggerantall. Ved å kjøre metoden describe på datasettet får vi ut  størrelsene count, mean, std, min, max, 25% percentile, 50% percentile og 75% percentile.  Vi betrakter 50% percentile som medianen. Dvs at vi får ut alle de størrelser vi ønsker å beregne i dette eksempelet kun ved å benytte describe metoden i pandas. "
    ]
   },
   {
@@ -103,7 +104,7 @@
    "metadata": {},
    "source": [
     "##### Kjører ut statistiske størrelser\n",
-    "Kjører ut statistike størrelser fra datframe df_areal_bnp_og_innbyggerantall med metoden describe. Resultat fr metode blir lagt i dataframeen df_stat."
+    "Kjører ut statistike størrelser fra dataframe df_areal_bnp_og_innbyggerantall med metoden describe. Resultat fra metoden blir lagt i dataframen df_stat."
    ]
   },
   {
@@ -121,7 +122,7 @@
    "metadata": {},
    "source": [
     "##### Transformere\n",
-    "Transformerer df_stat med transpose metoden i pandas slik at rader i df_stat blir kolonner i dataframe df_stat_trans. Formål er å gjøre output mer oversiktlig ved at alle størrelser på en gitt variabel blir liggende i samme rad. Dette kan være hensiktsmessig i de tilfeller antall \"statistikkvaiable\" er høyt (dvs langt høyere enn de fire som inngår i eksempel."
+    "Transformerer df_stat med transpose metoden i pandas slik at rader i df_stat blir kolonner i dataframe df_stat_trans. Formål er å gjøre output mer oversiktlig ved at alle størrelser på en gitt variabel blir liggende i samme rad. Dette kan være hensiktsmessig i de tilfeller antall \"statistikkvaiable\" er høyt (dvs langt høyere enn de fire som inngår i eksempel)."
    ]
   },
   {
@@ -141,11 +142,9 @@
     "### Beregninger - eksempel 2\n",
     "I eksempel 1 fikk vi beregnet de størrelsene vi var ute etter kun ved å bruke metoden describe. Hvis vi ønsker å beregne størrelser som ikke er støttet av describe metoden kan vi bruke andre bibliotek - f.eks. statistics bilioteket. \n",
     "\n",
-    "I eksempel 2 ønsker vi å beregne medianen gjennom å bruke en fuksjon/metode fra statistics bibloteket. Videre ønsker vi i samme steg å sette sammen medianen \"sammen\" med størrelsene vi får ved å kjøre describe metoden. Resultat skal transformeres på tilsvarende måte som i eksempel 1.\n",
+    "I eksempel 2 ønsker vi å beregne medianen gjennom å bruke en fuksjon/metode fra statistics biblioteket. Videre ønsker vi i samme steg å inkludere medianen \"sammen\" med størrelsene vi får ved å kjøre describe metoden. Resultat skal transformeres på tilsvarende måte som i eksempel 1.\n",
     "\n",
-    "Det er satt opp en funksjon - desc_statistics - som utører nødvendige steg for beregningene. \n",
-    "\n",
-    "\n"
+    "Det er satt opp en funksjon - desc_statistics - som utører nødvendige steg for beregningene. \n"
    ]
   },
   {
@@ -153,9 +152,9 @@
    "metadata": {},
    "source": [
     "Parametere til desc_statistics\n",
-    "- df  : dataframen som er input til fuksjon\n",
-    "- dec : Numerisk vaiabel som hvis satt til 0 endrer datatyper til integer\n",
-    "- med : Boolsk variabel som hvis satt til True beregner medianen ved å bruke funksjonen (median) i  statistics (st) biblioteket\n",
+    "- df  : dataframen som er input til funksjon\n",
+    "- dec : Numerisk variabel som hvis satt til 0 endrer datatyper til integer\n",
+    "- med : Boolsk variabel som hvis satt til True beregner medianen ved å bruke funksjonen (median) i statistics(st) biblioteket\n",
     "     \n"
    ]
   },
