--- a/utforske/deskriptiv_statistikk_pyspark.ipynb
+++ b/utforske/deskriptiv_statistikk_pyspark.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "#### Vis tilgjengelige datasett\n",
-    "Kjører metoden read.path for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning veilderens lagringsområde i sky. <br> Oversikten blir lest inn i egen dataframe - df_datsets.<br>\n",
+    "Kjører metoden read.path for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning til veilderens lagringsområde i sky. <br> Oversikten blir lest inn i egen dataframe - df_datsets.<br>\n",
     "Aktuelt lagringsområde blir lagt inn som parameter (string objekt som vi definerer selv) INNDATA_PATH."
    ]
   },
@@ -107,7 +107,7 @@
    "metadata": {},
    "source": [
     "##### 1. Kjører ut statistiske størrelser\n",
-    "Kjører ut statistike størrelser fra datframe df_areal_bnp_og_innbyggerantall med metoden summary. Resultat fra metode blir lagt i dataframeen df_stat."
+    "Kjører ut statistiske størrelser fra dataframe df_areal_bnp_og_innbyggerantall med metoden summary. Resultat fra metode blir lagt i dataframen df_stat."
    ]
   },
   {
@@ -125,7 +125,7 @@
    "metadata": {},
    "source": [
     "##### 2. Transformerer df_stat \n",
-    "Transformerer df_stat (med bl.a. pivot funksjonen) slik at rader i df_stat blir kolonner i dataframe df_stat_piv. Formål er å gjøre output mer oversiktlig ved at alle størrelser på en gitt variabel blir liggende i samme rad. Dette kan være hensiktsmessig i de tilfeller antall \"statistikkvaiable\" er høyt (dvs langt høyere enn de fire som inngår i eksempel."
+    "Transformerer df_stat (med bl.a. pivot funksjonen) slik at rader i df_stat blir kolonner i dataframe df_stat_piv. Formål er å gjøre output mer oversiktlig ved at alle størrelser på en gitt variabel blir liggende i samme rad. Dette kan være hensiktsmessig i de tilfeller antall \"statistikkvaiable\" er høyt (dvs langt høyere enn de fire som inngår i eksempel)."
    ]
   },
   {
@@ -160,9 +160,9 @@
    "metadata": {},
    "source": [
     "### Beregninger eksempel 2\n",
-    "I eksempel 1 fikk vi beregnet de størrelsene vi var ute etter kun ved å bruke metoden summary. Hvis vi ønsker å beregne størrelser som ikke er støttet av summary metoden kan vi bruke andre bibliotek - f.eks. statistics bilioteket.\n",
+    "I eksempel 1 fikk vi beregnet de størrelsene vi var ute etter kun ved å bruke metoden summary. Hvis vi ønsker å beregne størrelser som ikke er støttet av summary metoden kan vi bruke andre bibliotek - f.eks. statistics biblioteket.\n",
     "\n",
-    "I eksempel 2 ønsker vi å beregne medianen gjennom å bruke en fuksjon/metode fra statistics bibloteket. Videre ønsker vi i samme steg å sette sammen medianen \"sammen\" med størrelsene vi får ved å kjøre summary metoden. Resultat skal transformeres på tilsvarende måte som i eksempel 1.\n",
+    "I eksempel 2 ønsker vi å beregne medianen gjennom å bruke en funksjon/metode fra statistics bibloteket. Videre ønsker vi i samme steg å inkludere medianen \"sammen\" med størrelsene vi får ved å kjøre summary metoden. Resultat skal transformeres på tilsvarende måte som i eksempel 1.\n",
     "\n",
     "Vi ønsker å etablere datasett hvor medianen er satt sammen med størrelsene vi får fra summary. For å få til dette må vi gjennomføre flere steg."
    ]
@@ -172,7 +172,7 @@
    "metadata": {},
    "source": [
     "##### 1. Kjører ut statistiske størrelser med describe\n",
-    "Kjører ut statistiske størrelser fra dataframe df_areal_bnp_og_innbyggerantall med metoden describe. Resultat fra metode blir lagt i dataframeen df_stat"
+    "Kjører ut statistiske størrelser fra dataframe df_areal_bnp_og_innbyggerantall med metoden describe. Resultat fra metode blir lagt i dataframen df_stat"
    ]
   },
   {
@@ -207,7 +207,7 @@
    "source": [
     "##### 2. Beregner medianen\n",
     "Beregner medianen for hver kolonne i df_areal_bnp_og_innbyggerantall med funksjonen approxQuantile.\n",
-    "Resultat fra funsjon blir returnert inn i values felt i dictionaryet dict_median der key-value blir initiert med navn på kolonne i var_lst (kolonnenavnene i stat_df og de vi også skal beregne median for). Beregninger gjøres i loop på en og en variabel. Man må sjekke datatypen på kolonnen. approxQuantile feiler hvis datatype ikke er av numerisk type. Etter gjennomløp av loop blir dictionaryet transformert til et row-objekt som deretter blir transformert til et rdd-objekt, før vi til slutt får etablert dataframen df_median ved å utføre metoden toDF på row-objektet. For å få like datatyper på df_stat og df_median (noe vi må ha for å få slått de sammen) endrer vi datatypen til de variabler i df_median som har ArrayType til String."
+    "Resultat fra funksjon blir returnert inn i values felt i dictionaryet dict_median der key-value blir initiert med navn på kolonne i var_lst (kolonnenavnene i stat_df og de vi også skal beregne median for). Beregninger gjøres i loop på en og en variabel. Man må sjekke datatypen på kolonnen. approxQuantile feiler hvis datatype ikke er av numerisk type. Etter gjennomløp av loop blir dictionaryet transformert til et row-objekt som deretter blir transformert til et rdd-objekt, før vi til slutt får etablert dataframen df_median ved å utføre metoden toDF på row-objektet. For å få like datatyper på df_stat og df_median (noe vi må ha for å få slått de sammen) endrer vi datatypen til de variabler i df_median som har ArrayType til String."
    ]
   },
   {
